--- a/Retofit2/app/src/main/AndroidManifest.xml
+++ b/Retofit2/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 
 
     <application
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -36,20 +37,20 @@
         <activity
             android:name=".activity.Login"
             android:exported="true" > <!-- Remove intent-filter from Product_Detail -->
-<!--                        <intent-filter>-->
-<!--                            <action android:name="android.intent.action.MAIN" />-->
+                        <intent-filter>
+                            <action android:name="android.intent.action.MAIN" />
 
-<!--                            <category android:name="android.intent.category.LAUNCHER" />-->
-<!--                        </intent-filter>-->
+                            <category android:name="android.intent.category.LAUNCHER" />
+                        </intent-filter>
         </activity>
         <activity
             android:name=".activity.ProductDetailActivity"
             android:exported="true" > <!-- Remove intent-filter from Product_Detail -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".activity.CartActivity"
@@ -88,13 +89,16 @@
             android:name=".activity.AddressDeliveryActivity"
             android:exported="true" >
             <!-- Remove intent-filter from Product_Detail -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
 
+        <meta-data
+            android:name="com.hedgehog.ratingbar.RatingBar"
+            android:value="true" />
     </application>
 
 </manifest>
