--- a/Retofit2/app/src/main/AndroidManifest.xml
+++ b/Retofit2/app/src/main/AndroidManifest.xml
@@ -58,6 +58,11 @@
 
         </activity>
         <activity
+            android:name=".activity.ProfileActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
             android:name=".activity.ForgetPassword"
             android:exported="false" />
         <activity
