--- a/Retofit2/app/src/main/AndroidManifest.xml
+++ b/Retofit2/app/src/main/AndroidManifest.xml
@@ -28,6 +28,17 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activity.ChatBoxActivity"
+            android:exported="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
+
+
+        <activity
             android:name=".activity.OrderActivity"/>
         <activity
             android:name=".activity.FeedBackActivity"/>
