--- a/Retofit2/gradle/libs.versions.toml
+++ b/Retofit2/gradle/libs.versions.toml
@@ -9,6 +9,10 @@ activity = "1.10.1"
 constraintlayout = "2.2.1"
 retrofit = "2.9.0"
 glide = "4.16.0"
+guava = "33.3.1-android"
+generativeai = "0.9.0"
+firebaseCrashlyticsBuildtools = "3.0.3"
+
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -21,6 +25,10 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+guava = { module = "com.google.guava:guava", version.ref = "guava" }
+generativeai = { group = "com.google.ai.client.generativeai", name = "generativeai", version.ref = "generativeai" }
+firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
